--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       </div>
       <nav>
         <ul class="around">
-          <li><a class="btn rounded" href="/index.html">Home</a></li>
-          <li><a class="btn rounded" href="/index.html#about">About</a></li>
-          <li><a class="btn rounded" href="/pages/products.html">products</a></li>
+          <li><a class="btn rounded" href="/kartly">Home</a></li>
+          <li><a class="btn rounded" href="/kartly#about">About</a></li>
+          <li><a class="btn rounded" href="/kartly/pages/products.html">products</a></li>
           <li><a id="log" class="btn rounded" href="#"></a></li>
         </ul>
       </nav>
@@ -36,7 +36,7 @@
           We're more than just an online shop - we're passionate about bringing
           you the best products with exceptional service.
         </p>
-        <a href="/pages/products.html" class="btn rounded">Shop Now</a>
+        <a href="/kartly/pages/products.html" class="btn rounded">Shop Now</a>
       </div>
       <div class="center">
         <video autoplay loop muted plays-inline class="rounded">
