--- a/pages/products.html
+++ b/pages/products.html
@@ -20,9 +20,9 @@
       </div>
       <nav>
         <ul class="around">
-          <li><a class="btn rounded" href="/index.html">Home</a></li>
-          <li><a class="btn rounded" href="/index.html#about">About</a></li>
-          <li><a class="btn rounded" href="/pages/products.html">products</a></li>
+          <li><a class="btn rounded" href="/kartly/index.html">Home</a></li>
+          <li><a class="btn rounded" href="/kartly/index.html#about">About</a></li>
+          <li><a class="btn rounded" href="/kartly/pages/products.html">products</a></li>
           <li><a id="log" class="btn rounded" href="#"></a></li>
         </ul>
       </nav>
