--- a/pages/register.html
+++ b/pages/register.html
@@ -18,9 +18,9 @@
       </div>
       <nav>
         <ul class="around">
-          <li><a class="btn rounded" href="/index.html">Home</a></li>
-          <li><a class="btn rounded" href="/index.html#about">About</a></li>
-          <li><a class="btn rounded" href="/pages/products.html">products</a></li>
+          <li><a class="btn rounded" href="/kartly/index.html">Home</a></li>
+          <li><a class="btn rounded" href="/kartly/index.html#about">About</a></li>
+          <li><a class="btn rounded" href="/kartly/pages/products.html">products</a></li>
           <li><a id="log" class="btn rounded" href="#"></a></li>
         </ul>
       </nav>
@@ -120,7 +120,7 @@
             <div class="sign-in">
               <p>
                 You have account?
-                <a href="/pages/login.html" target="_self" rel="account">Sign in</a>
+                <a href="/kartly/pages/login.html" target="_self" rel="account">Sign in</a>
               </p>
             </div>
           </form>
