--- a/pages/login.html
+++ b/pages/login.html
@@ -19,9 +19,9 @@
       </div>
       <nav>
         <ul class="around">
-          <li><a class="btn rounded" href="/index.html">Home</a></li>
-          <li><a class="btn rounded" href="/index.html#about">About</a></li>
-          <li><a class="btn rounded" href="/pages/products.html">products</a></li>
+          <li><a class="btn rounded" href="/kartly/index.html">Home</a></li>
+          <li><a class="btn rounded" href="/kartly/index.html#about">About</a></li>
+          <li><a class="btn rounded" href="/kartly/pages/products.html">products</a></li>
           <li><a id="log" class="btn rounded" href="#"></a></li>
         </ul>
       </nav>
@@ -90,7 +90,7 @@
           <p>
             Don't 
             have an 
-            account? <a href="/pages/register.html" class="s">Sign Up</a>
+            account? <a href="/kartly/pages/register.html" class="s">Sign Up</a>
           </p>
         </div>
       </div>
